# motivated-reasoning-public

./: .gitignore  LICENSE  README.md  lint.sh  pyproject.toml  run_constitution_response_analysis.sh  run_constitution_response_gemini_direct.sh  run_constitution_response_gemini_evals_slurm.sh  run_constitution_response_reasonableness_evals.sh  run_constitution_response_reasonableness_evals_slurm.sh  setup.cfg
motivated_reasoning/: api_keys.py  data_root.py
motivated_reasoning/RL/: EI.py  KTO.py  base_iteration.py  run_EI_iteration.py  run_KTO_iteration.py
motivated_reasoning/agent/: agent.py
motivated_reasoning/backend/: anthropic_backend.py  hf_backend.py  openai_backend.py
motivated_reasoning/config/: README.md  experiment_config.py
motivated_reasoning/environment/: assessor_model.py  character.py  environment.py
motivated_reasoning/environment_vectorized/: assessor_model_vectorized.py  character_vectorized.py  environment_vectorized.py  influence_detector_model_vectorized.py  preference_model_vectorized.py  trajectory_queue.py  transition_model_vectorized.py
motivated_reasoning/generalization/: cross_env_generalization.py  run_generalization_from_configs.py  utils_dataset.py
motivated_reasoning/generate_initial_states/: generate_even_numbers.py  generate_favorite_numbers.py  generate_first_second.py  test_generate_favorite_numbers.py
motivated_reasoning/inference/: model_utils.py  test_model_nan_debug.py
motivated_reasoning/plotting/: four_plot_simple_evaluation.py  old_plot_evaluation.py  plot_average_evaluation.py  plot_refusal.py  (+16 more)
notebooks/: Cross Generalization.ipynb  Failure_analysis.ipynb  Plotting Results.ipynb  Qualitative Evals.ipynb  Real Toxicity.ipynb  Sycophancy Answers.ipynb  Sycophancy Feedback.ipynb
tests/: manual_test_extraction.py  test_assessor_model.py  test_basics.py  test_prepare_messages.py  test_split_reasoning.py
(+278 files in other folders)
